--- a/src/main/webapp/static/themes/light/modules/_icons.scss
+++ b/src/main/webapp/static/themes/light/modules/_icons.scss
@@ -100,13 +100,15 @@ $fa-css-prefix: "o_icon" !default;
 .o_icon_dev:before { content: $fa-var-bug;}
 .o_icon_disabled:before { content: $fa-var-circle-o;}
 .o_icon_download:before { content: $fa-var-download;}
+.o_icon_draft:before { content: $fa-var-pencil;}
+.o_icon_do_review:before { content: $fa-var-star;}
 .o_icon_edit:before { content: $fa-var-edit;}
 .o_icon_edit_file:before { content: $fa-var-edit;}
 .o_icon_edit_metadata:before { content: $fa-var-gear;}
 .o_icon_element_after:before { content: $fa-var-arrow-down; }
 .o_icon_element_before:before { content: $fa-var-arrow-up; }
 .o_icon_enabled:before { content: $fa-var-circle; }
-.o_icon_end_of_life:before { content: $fa-var-trash-o;}
+.o_icon_endOfLife:before { content: $fa-var-trash-o;}
 .o_icon_enlarge:before { content: $fa-var-search-plus;}
 .o_icon_eportfolio_add:before { content: $fa-var-puzzle-piece;}
 .o_icon_eportfolio_link:before { content: $fa-var-puzzle-piece; }
@@ -119,7 +121,7 @@ $fa-css-prefix: "o_icon" !default;
 .o_icon_failed:before { content: $fa-var-times-circle;}
 .o_icon_files:before { content: $fa-var-files-o;}
 .o_icon_filter:before { content: $fa-var-filter;}
-.o_icon_final:before { content: $fa-var-check;}
+.o_icon_finalVersion:before { content: $fa-var-check;}
 .o_icon_graduate:before { content: $fa-var-graduation-cap; }
 .o_icon_group:before, .o_BusinessGroup_icon:before { content: $fa-var-users; }
 .o_icon_header:before { content: $fa-var-header;}
@@ -242,9 +244,9 @@ $fa-css-prefix: "o_icon" !default;
 .o_icon_restore:before { content: $fa-var-thumbs-up; }
 .o_icon_results_visible:before { content: $fa-var-eye;}
 .o_icon_results_hidden:before { content: $fa-var-eye-slash;}
-.o_icon_review:before { content: $fa-var-star;}
+.o_icon_review:before { content: $fa-var-star-o;}
 .o_icon_reviewer:before { content: $fa-var-user-md;}
-.o_icon_revision:before { content: $fa-var-rotate-left;}
+.o_icon_revised:before { content: $fa-var-rotate-left;}
 .o_icon_rss:before { content: $fa-var-rss;}
 .o_icon_rss_unsubscribe:before { content: $fa-var-rss; color: #996633;}
 .o_icon_rubric:before { content: $fa-var-sliders; }
@@ -269,7 +271,6 @@ $fa-css-prefix: "o_icon" !default;
 .o_icon_sort_amount_desc:before { content: $fa-var-sort-amount-desc;}
 .o_icon_sort_menu:before { content: $fa-var-sort-amount-asc;}
 .o_icon_start:before { content: $fa-var-chevron-right; }
-.o_icon_start_review:before { content: $fa-var-star-o;}
 .o_icon_status_available:before { content: $fa-var-circle; color: $o-im-status-available-color; }
 .o_icon_status_chat:before { content: $fa-var-comment; }
 .o_icon_status_dnd:before { content: $fa-var-dot-circle-o; color: $o-im-status-dnd-color; }
