--- a/src/main/webapp/static/themes/light/modules/_icons.scss
+++ b/src/main/webapp/static/themes/light/modules/_icons.scss
@@ -218,6 +218,11 @@ $fa-css-prefix: "o_icon" !default;
 .o_icon_provider_tequila:before { content: $fa-var-university;}
 .o_icon_provider_twitter:before { content: $fa-var-twitter;}
 .o_icon_publish:before { content: $fa-var-share;}
+.o_icon_qitem_commands:before { content: $fa-var-gears;}
+.o_icon_qitem_copy:before { content: $fa-var-copy;}
+.o_icon_qitem_delete:before { content: $fa-var-trash;}
+.o_icon_qitem_export:before { content: $fa-var-download;}
+.o_icon_qitem_share:before { content: $fa-var-share;}
 .o_icon_quota:before { content: $fa-var-database;}
 .o_icon_qrcode:before { content: $fa-var-qrcode;}
 .o_icon_quickview:before { content: $fa-var-eye;}
