--- a/src/main/webapp/static/themes/light/modules/_qpool.scss
+++ b/src/main/webapp/static/themes/light/modules/_qpool.scss
@@ -1,1 +1,106 @@
 /* question pool */
+.o_qpool_source_status {
+	text-align: center;
+}
+
+.btn-arrow-right.o_qpool_draft {
+	background: $o-qpool-draft-bg-color;
+}
+.btn-arrow-right.o_qpool_review {
+	background: $o-qpool-review-bg-color;
+}
+.btn-arrow-right.o_qpool_revised {
+	background: $o-qpool-revised-bg-color;
+}
+.btn-arrow-right.o_qpool_final {
+	background: $o-qpool-final-bg-color;
+}
+.btn-arrow-right.o_qpool_end_of_life {
+	background: $o-qpool-end-of-life-bg-color;
+}
+.btn-arrow-right.o_qpool_status_slected {
+	color: $o-qpool-status-selected-color;
+	font-weight: $o-qpool-status-selected-font-weight;
+}
+
+
+// Thanks to https://github.com/shpoont/bootstrap-arrow-buttons
+.btn-arrow-right,
+.btn-arrow-left {
+	position: relative;
+	padding-left: 18px;
+	padding-right: 18px;
+	margin-bottom: 5px;
+}
+.btn-arrow-right {
+	padding-left: 36px;
+}
+.btn-arrow-left {
+	padding-right: 36px;
+}
+.btn-arrow-right:before,
+.btn-arrow-right:after,
+.btn-arrow-left:before,
+.btn-arrow-left:after {
+
+/* make two squares (before and after), looking similar to the button */
+	content: "";
+	position: absolute;
+	top: 5px;
+	/* move it down because of rounded corners */
+	width: 22.627417px;
+	/* same as height */
+	height: 22.627417px;
+	/* button_inner_height / sqrt(2) */
+	background: inherit;
+	/* use parent background */
+	border: inherit;
+	/* use parent border */
+	border-left-color: transparent;
+	/* hide left border */
+	border-bottom-color: transparent;
+	/* hide bottom border */
+	border-radius: 0px 4px 0px 0px;
+	/* round arrow corner, the shorthand property doesn't accept "inherit" so it is set to 4px */
+	-webkit-border-radius: 0px 4px 0px 0px;
+	-moz-border-radius: 0px 4px 0px 0px;
+}
+.btn-arrow-right:before,
+.btn-arrow-right:after {
+	transform: rotate(45deg);
+	/* rotate right arrow squares 45 deg to point right */
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	-o-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+}
+.btn-arrow-left:before,
+.btn-arrow-left:after {
+	transform: rotate(225deg);
+	/* rotate left arrow squares 225 deg to point left */
+	-webkit-transform: rotate(225deg);
+	-moz-transform: rotate(225deg);
+	-o-transform: rotate(225deg);
+	-ms-transform: rotate(225deg);
+}
+.btn-arrow-right:before,
+.btn-arrow-left:before {
+	/* align the "before" square to the left */
+	left: -11px;
+}
+.btn-arrow-right:after,
+.btn-arrow-left:after {
+	/* align the "after" square to the right */
+	right: -11px;
+}
+.btn-arrow-right:after,
+.btn-arrow-left:before {
+	/* bring arrow pointers to front */
+	z-index: 1;
+}
+.btn-arrow-right:before,
+.btn-arrow-left:after {
+	/* hide arrow tails background */
+	background-color: white;
+}
+
