--- a/src/main/webapp/static/themes/light/modules/_icons.scss
+++ b/src/main/webapp/static/themes/light/modules/_icons.scss
@@ -100,15 +100,12 @@ $fa-css-prefix: "o_icon" !default;
 .o_icon_dev:before { content: $fa-var-bug;}
 .o_icon_disabled:before { content: $fa-var-circle-o;}
 .o_icon_download:before { content: $fa-var-download;}
-.o_icon_draft:before { content: $fa-var-pencil;}
-.o_icon_do_review:before { content: $fa-var-star;}
 .o_icon_edit:before { content: $fa-var-edit;}
 .o_icon_edit_file:before { content: $fa-var-edit;}
 .o_icon_edit_metadata:before { content: $fa-var-gear;}
 .o_icon_element_after:before { content: $fa-var-arrow-down; }
 .o_icon_element_before:before { content: $fa-var-arrow-up; }
 .o_icon_enabled:before { content: $fa-var-circle; }
-.o_icon_endOfLife:before { content: $fa-var-trash-o;}
 .o_icon_enlarge:before { content: $fa-var-search-plus;}
 .o_icon_eportfolio_add:before { content: $fa-var-puzzle-piece;}
 .o_icon_eportfolio_link:before { content: $fa-var-puzzle-piece; }
@@ -122,7 +119,6 @@ $fa-css-prefix: "o_icon" !default;
 .o_icon_failed:before { content: $fa-var-times-circle;}
 .o_icon_files:before { content: $fa-var-files-o;}
 .o_icon_filter:before { content: $fa-var-filter;}
-.o_icon_finalVersion:before { content: $fa-var-check;}
 .o_icon_graduate:before { content: $fa-var-graduation-cap; }
 .o_icon_group:before, .o_BusinessGroup_icon:before { content: $fa-var-users; }
 .o_icon_header:before { content: $fa-var-header;}
@@ -248,9 +244,7 @@ $fa-css-prefix: "o_icon" !default;
 .o_icon_restore:before { content: $fa-var-thumbs-up; }
 .o_icon_results_visible:before { content: $fa-var-eye;}
 .o_icon_results_hidden:before { content: $fa-var-eye-slash;}
-.o_icon_review:before { content: $fa-var-star-o;}
 .o_icon_reviewer:before { content: $fa-var-user-md;}
-.o_icon_revised:before { content: $fa-var-rotate-left;}
 .o_icon_rss:before { content: $fa-var-rss;}
 .o_icon_rss_unsubscribe:before { content: $fa-var-rss; color: #996633;}
 .o_icon_rubric:before { content: $fa-var-sliders; }
@@ -416,8 +410,15 @@ $fa-css-prefix: "o_icon" !default;
 .o_icon_qitem_commands:before { content: $fa-var-gears;}
 .o_icon_qitem_copy:before { content: $fa-var-copy;}
 .o_icon_qitem_delete:before { content: $fa-var-trash;}
+.o_icon_qitem_do_review:before { content: $fa-var-star;}
+.o_icon_qitem_draft:before { content: $fa-var-pencil;}
+.o_icon_qitem_endOfLife:before { content: $fa-var-trash-o;}
+.o_icon_qitem_finalVersion:before { content: $fa-var-check;}
 .o_icon_qitem_export:before { content: $fa-var-download;}
+.o_icon_qitem_review:before { content: $fa-var-star-o;}
+.o_icon_qitem_revised:before { content: $fa-var-rotate-left;}
 .o_icon_qitem_share:before { content: $fa-var-share;}
+.o_icon_qitem_status:before { content: $fa-var-arrow-right;}
 
 /* notification icons */
 .o_forum_message_icon:before { content: $fa-var-comment-o; }
