--- a/src/main/webapp/static/themes/light/_config.scss
+++ b/src/main/webapp/static/themes/light/_config.scss
@@ -350,7 +350,10 @@ $o-portfolio-entry-draft-color						: $brand-warning !default;
 $o-portfolio-entry-published-color					: $brand-primary !default;
 $o-portfolio-entry-inrevision-color					: $brand-danger !default;
 $o-portfolio-entry-closed-color						: $brand-success !default;
-$o-portfolio-entry-deleted-color					: #000 !default;
+$o-portfolio-entry-deleted-color						: #000 !default;
+$o-portfolio-entry-incoming-color					: $brand-success !default;
+$o-portfolio-entry-inprocess-color					: #c8c8c8 !default;
+$o-portfolio-entry-done-color						: $brand-success !default;
 $o-portfolio-media-content-background-color			: #f8f8f8 !default;
 $o-portfolio-media-content-space					: $padding-large-vertical !default;
 $o-portfolio-lead-space-sm							: $padding-large-vertical !default;
