--- a/src/main/webapp/static/themes/light/theme.css
+++ b/src/main/webapp/static/themes/light/theme.css
@@ -1,4 +1,4 @@
-﻿/*!
+/*!
  * ========================================================
  *  <a href="http://www.openolat.org">
  *  OpenOLAT - Online Learning and Training</a><br>
