OO-3117: New field to edit the creator

--- a/src/main/webapp/static/themes/light/modules/_qpool.scss
+++ b/src/main/webapp/static/themes/light/modules/_qpool.scss
@@ -3,6 +3,10 @@
 	text-align: center;
 }
 
+.o_qitem_author {
+	white-space: nowrap;
+}
+
 /* dropdown element in toolbar */
 a.o_qpool_tools_status,
 .dropdown-toggle.o_qpool_tools_status  {
