OO-3117: Use unique css class names

--- a/src/main/webapp/static/themes/light/_config.scss
+++ b/src/main/webapp/static/themes/light/_config.scss
@@ -660,9 +660,9 @@ $o-slider-handler-border-color		: $brand-primary !default;
 $o-slider-handler-background-color	: $brand-primary !default;
 
 /* Lables */
-$o-label_color					: #fff;
-$o-label_bg-color				: #777;
-$o-label-light-bg-color			: $o-toolbar-bg-color;
+$o-labeled_color						: #fff;
+$o-labeled_bg-color					: #777;
+$o-labeled-light-bg-color			: $o-toolbar-bg-color;
 
 /* QPool */
 $o-qpool-arrow-bg-color				: $o-toolbar-bg-color !default;
