OO-3216: add separate active/closed filter in the author environment and in the extended search in "My courses"

--- a/src/main/webapp/static/themes/light/modules/_repository.scss
+++ b/src/main/webapp/static/themes/light/modules/_repository.scss
@@ -118,3 +118,12 @@ tr.o_entry_unpublished, tr.o_entry_unpublished td, tr.o_entry_unpublished td spa
 tr.o_entry_deleted {
 
 }
+
+.o_repo_status_filter > div {
+	display:inline-block;
+	
+	label {
+		font-weight: normal;
+	}
+}
+
