OO-3249: Add copied and converted items to lists, favorites, pools and groups

--- a/src/main/webapp/static/themes/light/modules/_icons.scss
+++ b/src/main/webapp/static/themes/light/modules/_icons.scss
@@ -408,6 +408,7 @@ $fa-css-prefix: "o_icon" !default;
 .o_icon_pool_pool:before { content: $fa-var-share-alt-square;}
 .o_icon_pool_share:before { content: $fa-var-group; }
 .o_icon_qitem_commands:before { content: $fa-var-gears;}
+.o_icon_qitem_convert:before { content: $fa-var-exchange;}
 .o_icon_qitem_copy:before { content: $fa-var-copy;}
 .o_icon_qitem_delete:before { content: $fa-var-trash;}
 .o_icon_qitem_draft:before { content: $fa-var-pencil;}
