--- a/src/main/webapp/static/themes/light/_config.scss
+++ b/src/main/webapp/static/themes/light/_config.scss
@@ -433,6 +433,9 @@ $o-qti-match-drop-accept-border-color				: darken($brand-info, 25%) !default;
 $o-qti-match-target-border-color						: $brand-info !default;
 $o-qti-match-target-bg								: $state-info-bg !default;
 $o-qti-match-border-radius							: $panel-border-radius !default;
+$o-qti-match-true-false-unanswered-bg				: lighten($gray-lighter, 5%) !default;
+$o-qti-match-true-false-right-bg						: lighten($brand-success, 40%) !default;
+$o-qti-match-true-false-wrong-bg						: lighten($brand-danger, 40%) !default;
 $o-qti-order-source-border-style						: dashed !default;
 $o-qti-order-sources-border-color					: $o-qti-run-infos-border-color !default;
 $o-qti-order-border-radius							: $panel-border-radius !default;
