--- a/src/main/webapp/static/themes/light/modules/_evaluation_form.scss
+++ b/src/main/webapp/static/themes/light/modules/_evaluation_form.scss
@@ -92,8 +92,20 @@
 			margin-bottom: 0.5em;
 		}
 	
-		.o_evaluation_text {
-			
+		.o_evaluation_text {	
+		}
+	}
+	
+	.o_evaluation_fileupload {
+		.o_evaluation_legend {
+			padding-left: 0.5em;
+			margin-bottom: 0.5em;
+		}
+	
+		.o_evaluation_thumb {
+		}
+		
+		.o_evaluation_filename {
 		}
 	}
 }
