OO-3335: add an explanation to the notice function of QTI 2.1

--- a/src/main/java/org/olat/ims/qti21/ui/components/_content/graphicGapMatchInteraction.html
+++ b/src/main/java/org/olat/ims/qti21/ui/components/_content/graphicGapMatchInteraction.html
@@ -23,7 +23,7 @@
 			$r.appendFlexiFormDirtyForClick("ac_${responseIdentifier}_$hotspot.identifier")
 		#end
 		</map>
-		<div class="o_gap_container_help">
+		<div class="o_item_container_help">
 			<p><i class="o_icon o_icon_help"> </i> $r.translate("graphic.gap.explanation")</p>
 		</div>
 		<div class="gap_container clearfix">
