OO-3339: reimplement correction workflow in assessment tool for QTI 2.1

--- a/src/main/webapp/static/themes/light/modules/_course.scss
+++ b/src/main/webapp/static/themes/light/modules/_course.scss
@@ -282,7 +282,7 @@
 }
 
 /* Assessment tool */
-div.o_sel_correction_navigation {
+div.o_correction_navigation {
 	text-align: center;
 	
 	#o_cocurrent_item_SELBOX {
