OO-3364; in QTI 2.1 results reports show the answer with all the data, solution is collapsed (but not in print view)

--- a/src/main/webapp/static/themes/light/modules/_qti21.scss
+++ b/src/main/webapp/static/themes/light/modules/_qti21.scss
@@ -215,6 +215,10 @@ img.o_hotspot_responsive[usemap] {
 		font-family: $font-family-monospace;
 	}
 	
+	pre {
+		font-family: $font-family-monospace;
+	}
+	
 	.o_qti_essay_last_save {
 		padding: 2px 2px;
 		font-style: italic;
