OO-3170: Search for licenses

--- a/src/main/webapp/static/themes/light/modules/_search.scss
+++ b/src/main/webapp/static/themes/light/modules/_search.scss
@@ -23,6 +23,10 @@
 	
 }
 
+.o_search_result_license {
+	color: $text-muted;
+	font-size: $font-size-small;
+}
 .o_search_result_highlight {
 	font-weight: $o-search-highlight-font-weight;
 	background-color: $o-search-highlight-color;
