--- a/src/main/webapp/static/themes/light/modules/_qti21.scss
+++ b/src/main/webapp/static/themes/light/modules/_qti21.scss
@@ -212,6 +212,11 @@ img.o_hotspot_responsive[usemap] {
 	textarea {
 		/* fix missing resize handle in Safe Exam Browser */
 		resize: vertical !important;
+		font-family: $font-family-monospace;
+	}
+	
+	pre {
+		font-family: $font-family-monospace;
 	}
 	
 	.o_qti_essay_last_save {
@@ -220,6 +225,13 @@ img.o_hotspot_responsive[usemap] {
 		font-size: 90%;
 		text-align:right;
 	}
+}
+
+.extendedTextInteraction div.form-control.textarea_disabled {
+	white-space: pre-wrap;
+	height: auto;
+	font-family: $font-family-monospace;
+	color: $input-color !important;
 }
 
 #o_qti_run_title {
