OO-3173 beautify license search result

--- a/src/main/webapp/static/themes/light/modules/_search.scss
+++ b/src/main/webapp/static/themes/light/modules/_search.scss
@@ -24,8 +24,9 @@
 }
 
 .o_search_result_license {
-	color: $text-muted;
-	font-size: $font-size-small;
+	font-weight: normal;
+	font-size: $o-font-size-xsmall;
+	vertical-align: middle;
 }
 .o_search_result_highlight {
 	font-weight: $o-search-highlight-font-weight;
