OO-3173 make search result better readable, use less space

--- a/src/main/webapp/static/themes/light/_config.scss
+++ b/src/main/webapp/static/themes/light/_config.scss
@@ -520,7 +520,7 @@ $o-search-details-color			: $text-muted !default;
 $o-search-details-font-size		: $font-size-small !default;
 $o-search-details-bg			: #fff !default;
 $o-search-excerpt-color			: $gray !default;
-$o-search-highlight-color		: $state-warning-bg !default;
+$o-search-highlight-color		: transparent !default; //google has no bgcolor. If you want one, try $state-warning-bg;
 $o-search-highlight-font-weight	: bold !default;
 
 /* Message boxes */
