--- a/src/main/webapp/static/themes/light/modules/_search.scss
+++ b/src/main/webapp/static/themes/light/modules/_search.scss
@@ -20,26 +20,38 @@
 	display: inline-block;
 	margin-right: $padding-base-horizontal;
 	margin-bottom: $padding-base-vertical;
-	
-}
-
-.o_search_result_license {
-	font-weight: normal;
-	font-size: $o-font-size-xsmall;
-	vertical-align: middle;
+	.o_icon-fw {
+		text-align: left;
+	}	
 }
 .o_search_result_highlight {
 	font-weight: $o-search-highlight-font-weight;
 	background-color: $o-search-highlight-color;
 }
 .o_search_result_context {
+	display: inline-block; /* license on same line after context */
 	color: $o-search-context-color; 
+	margin-right: 1em;
 }
+.o_search_result_license {
+	display: inline-block; /* license on same line after context */
+	color: $text-muted;
+} 
 .o_search_result_excerpt {
 	color: $o-search-excerpt-color; 
 }
+.o_search_result .o_opener {
+	font-size: $font-size-small;		
+	i {
+		@extend .o_icon_open_togglebox;
+		width: 1em; 
+	}
+	&.o_in i {
+		@extend .o_icon_close_togglebox;
+	}
+}
 .o_search_result_details {
-	.o_togglebox_wrapper {
+	.o_togglebox_wrapper {		
 		&.o_block {
 			margin-top:0;
 			margin-bottom: 0;
@@ -49,6 +61,9 @@
 			font-size: $o-search-details-font-size;
 			background: $o-search-details-bg;
 			padding: $padding-base-vertical $padding-base-horizontal;
+		}
+		.o_search_result_license i {
+			font-size: 20px;
 		}
 	}
 	@media (max-width: $screen-xs-max) { 
